# tri-mesh-hole-closer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/tmhc/: close_hole.h  close_holes.h  extract_edges.h  find_holes.h  surface_fairing.h  utils.h
